TRIBES: Added fix for flexbox not aligning items to the left at the last row

--- a/kdp-frontend/src/styles/pageStyles/tribes/Tribes.scss
+++ b/kdp-frontend/src/styles/pageStyles/tribes/Tribes.scss
@@ -10,14 +10,17 @@
 .background-container {
   .tribes-links-container {
     min-height: calc(100vh - 160px - 104.16px - 80px - 1em);
-    padding-top: 1em;
+    padding-top: 1.5em;
+    max-width: 65%;
+    margin: auto;
 
     .tribes-links-flexbox {
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 1em;
+      row-gap: 1em;
+      column-gap: 1em;
 
       h3 {
         color: $trit-white;
@@ -37,6 +40,16 @@
     }
   }
 }
+
+/* for the flexbox left-align fix */
+.flexbox-fix {
+  visibility: hidden;
+}
+.empty-card {
+  height: 1em;
+  width: 15em + 2em; /* 2em = 2x1em padding */
+}
+/* end fix */
 
 @media only screen and (max-width: 480px) {
   .content-container {
